--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Golosinas Aries</title>
+  <title>Golosinas Aries - Inicio</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
   <style>
-    /* Variables de paleta */
     :root {
-      --primary: #4a90e2;
-      --accent: #f39c12;
-      --bg: #f0f4f8;
+      --primary: #6a1b9a;  /* Violeta */
+      --accent: #00b894;   /* Verde pastel */
+      --bg: #f3f9f7;       /* Fondo muy suave */
       --text: #333;
-      --border-radius: 8px;
+      --border-radius: 12px;
     }
 
     body {
@@ -46,19 +45,30 @@
     .hero {
       text-align: center;
       padding: 4rem 1rem;
-      background: #e6f0fc;
+      background-image: url('img/hero-golosinas.jpg');
+      background-size: cover;
+      background-position: center;
+      color: #fff;
       position: relative;
     }
 
-    .hero::after {
-      content: "🚀";
-      display: inline-block;
-      font-size: 3rem;
-      margin-top: 1rem;
+    .hero-overlay {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.25);
+      z-index: 0;
+    }
+
+    .hero h2, .hero p, .hero button {
+      position: relative;
+      z-index: 1;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
     }
 
     .hero h2 {
-      font-size: 2rem;
+      font-size: 2.5rem;
       margin-bottom: 1rem;
     }
 
@@ -69,67 +79,76 @@
 
     .hero button {
       padding: 0.75rem 1.5rem;
-      background: var(--primary);
+      background: var(--accent);
       color: #fff;
       border: none;
       border-radius: var(--border-radius);
       cursor: pointer;
       font-size: 1rem;
+      margin: 0 0.5rem;
       transition: background 0.3s, transform 0.3s;
     }
 
     .hero button:hover {
-      background: var(--accent);
+      background: var(--primary);
       transform: scale(1.05);
     }
 
-    .hero button:focus {
-      outline: 2px dashed var(--accent);
-      outline-offset: 4px;
-    }
-
-    /* Servicios destacados */
-    .servicios {
+    .destacados {
       text-align: center;
       padding: 2rem 1rem;
     }
 
-    .servicio {
-      display: inline-block;
-      width: 30%;
-      margin: 1%;
+    .destacados h2 {
+      color: var(--primary);
+      margin-bottom: 2rem;
+    }
+
+    .portfolio {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 1rem;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 1rem;
+    }
+
+    .card {
       background: #fff;
+      border: 2px solid var(--accent);
       border-radius: var(--border-radius);
-      border: 1px solid #ccc;
-      padding: 1rem;
-      vertical-align: top;
+      padding: 0.5rem;
+      text-align: center;
       transition: transform 0.3s, box-shadow 0.3s;
     }
 
-    .servicio:hover {
+    .card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 8px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 15px rgba(0,0,0,0.15);
     }
 
-    .servicio::before {
-      content: "★";
-      display: block;
-      font-size: 2rem;
-      color: var(--accent);
+    .card img {
+      width: 100%;
+      border-radius: 8px;
       margin-bottom: 0.5rem;
+      height: 140px;
+      object-fit: cover;
     }
 
-    .servicio h3 {
+    .card h3 {
+      color: var(--primary);
+      margin-bottom: 0.25rem;
+      font-size: 1rem;
+    }
+
+    .card p {
       margin-bottom: 0.5rem;
+      font-size: 0.85rem;
     }
 
-    .servicio p {
-      margin-bottom: 1rem;
-    }
-
-    .servicio button {
+    .card button {
       padding: 0.5rem 1rem;
-      background: var(--primary);
+      background: var(--accent);
       color: #fff;
       border: none;
       border-radius: var(--border-radius);
@@ -137,55 +156,79 @@
       transition: background 0.3s;
     }
 
-    .servicio button:hover {
-      background: var(--accent);
+    .card button:hover {
+      background: var(--primary);
     }
 
-    .servicio button:focus {
-      outline: 2px dashed var(--accent);
-      outline-offset: 2px;
+    .sobre-nosotros {
+      text-align: center;
+      padding: 2rem 1rem;
+      max-width: 800px;
+      margin: 0 auto 4rem auto;
     }
 
+    .sobre-nosotros h3 {
+      color: var(--primary);
+      margin-bottom: 1rem;
+    }
+
+    .sobre-nosotros p {
+      font-size: 1.1rem;
+      line-height: 1.5;
+    }
+
+    @media (max-width: 480px) {
+      .hero h2 { font-size: 2rem; }
+      .hero p { font-size: 1rem; }
+    }
   </style>
 </head>
 <body>
 
-  <!-- Header -->
   <header>
     <h1>Golosinas Aries</h1>
     <nav>
       <a href="index.html">Inicio</a>
-      <a href="servicios.html">Servicios</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="blog.html">Blog</a>
+      <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
 
-  <!-- Hero -->
   <section class="hero">
-    <h2>Golosinas de calidad</h2>
-    <p>Desarrollamos soluciones a medida para tu negocio</p>
-    <button>Contáctanos</button>
+    <div class="hero-overlay"></div>
+    <h2>Bienvenidos a Golosinas Aries</h2>
+    <p>Dulces, juguetes y regalos personalizados para sorprender a todos.</p>
+    <button onclick="window.location.href='catalogo.html'">Ver Catálogo</button>
+    <button onclick="window.location.href='contacto.html'">Contáctanos</button>
   </section>
 
-  <!-- Servicios destacados -->
-  <section class="servicios">
-    <div class="servicio">
-      <h3>A</h3>
-      <p>B</p>
-      <button>Ver más</button>
+  <section class="destacados">
+    <h2>Productos Destacados</h2>
+    <div class="portfolio">
+      <div class="card">
+        <img src="img/alcancias.jpg" alt="Alcancía divertida">
+        <h3>Alcancía divertida</h3>
+        <p>Perfecta para guardar tus monedas.</p>
+        <button onclick="window.location.href='catalogo.html'">Ver más</button>
+      </div>
+      <div class="card">
+        <img src="img/burbujero.jpg" alt="Burbujero mágico">
+        <h3>Burbujero mágico</h3>
+        <p>Divertido juego de burbujas para todas las edades.</p>
+        <button onclick="window.location.href='catalogo.html'">Ver más</button>
+      </div>
+      <div class="card">
+        <img src="img/nutello.jpg" alt="Nutello">
+        <h3>Nutello</h3>
+        <p>Dulce irresistible para grandes y chicos.</p>
+        <button onclick="window.location.href='catalogo.html'">Ver más</button>
+      </div>
     </div>
-    <div class="servicio">
-      <h3>C</h3>
-      <p>D</p>
-      <button>Ver más</button>
-    </div>
-    <div class="servicio">
-      <h3>C</h3>
-      <p>A</p>
-      <button>Ver más</button>
-    </div>
+  </section>
+
+  <section class="sobre-nosotros">
+    <h3>¿Quiénes somos?</h3>
+    <p>En Golosinas Aries nos dedicamos a crear experiencias dulces y divertidas, desde alcancías llenas de caramelos hasta juguetes personalizados para cada ocasión. Cada regalo es único y memorable.</p>
   </section>
 
 </body>
