Actualizar diseño de index, contacto y catálogo; separar CSS y preparar modal de catálogo

--- a/contacto.html
+++ b/contacto.html
@@ -5,113 +5,6 @@
   <title>Contacto - Golosinas Aries</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background: #f0f4f8;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background: #4a90e2;
-      color: #fff;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    nav a {
-      display: inline-block;
-      margin: 0 1rem;
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #ff6f61;
-    }
-
-    main {
-      padding: 2rem 1rem;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 1rem;
-      color: #4a90e2;
-    }
-
-    p.info {
-      text-align: center;
-      color: #ff6f61;
-      font-weight: bold;
-      margin-bottom: 2rem;
-    }
-
-    form {
-      border: 1px solid #4a90e2;
-      border-radius: 8px;
-      background: #fff;
-      padding: 1rem;
-      margin-bottom: 2rem;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 0.5rem;
-      font-weight: bold;
-    }
-
-    input, textarea, button {
-      display: block;
-      width: 100%;
-      margin-bottom: 1rem;
-      padding: 0.5rem;
-      font-size: 1rem;
-      border-radius: 8px;
-    }
-
-    input, textarea {
-      border: 1px solid #ccc;
-    }
-
-    input:disabled, textarea:disabled, button:disabled {
-      background: #e0e0e0;
-      cursor: not-allowed;
-    }
-
-    button {
-      background: #4a90e2;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover:enabled {
-      background: #ff6f61;
-    }
-
-    .datos-contacto p {
-      margin-bottom: 0.5rem;
-    }
-
-    .datos-contacto a {
-      color: #4a90e2;
-      text-decoration: none;
-    }
-
-    .datos-contacto a:hover {
-      text-decoration: underline;
-      color: #ff6f61;
-    }
-
-  </style>
 </head>
 <body>
 
@@ -125,7 +18,8 @@
     </nav>
   </header>
 
-  <main>
+  <!-- Contacto -->
+  <main class="contacto">
     <h2>Formulario de Contacto</h2>
     <p class="info">El formulario aún no está disponible. Podés contactarnos directamente por WhatsApp o redes sociales.</p>
 
