--- a/catalogo.html
+++ b/catalogo.html
@@ -5,220 +5,93 @@
   <title>Catálogo - Golosinas Aries</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
-  <style>
-    .catalogo {
-      text-align: center;
-      border-top: 1px solid transparent;
-      padding-top: 1px;
-      margin-top: 2rem;
-    }
-
-    .card {
-      display: inline-block;
-      width: 30%;
-      margin: 1%;
-      padding: 1rem;
-      background: #f9f9f9;
-      border: 1px solid var(--primary);
-      border-radius: var(--border-radius);
-      vertical-align: top;
-    }
-
-    .card img {
-      width: 100%;
-      border-radius: var(--border-radius);
-      margin-bottom: 0.5rem;
-      cursor: pointer;
-    }
-
-    .card h3 {
-      margin-bottom: 0.5rem;
-    }
-
-    .card p {
-      margin-bottom: 1rem;
-    }
-
-    .card button {
-      padding: 0.5rem 1rem;
-      background: var(--primary);
-      color: #fff;
-      border: none;
-      border-radius: var(--border-radius);
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .card button:hover {
-      background: var(--accent);
-    }
-
-    .card button:focus {
-      outline: 2px dashed var(--accent);
-      outline-offset: 2px;
-    }
-
-    /* Modal */
-    .modal {
-      display: none; 
-      position: fixed; 
-      z-index: 1000; 
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto; 
-      background-color: rgba(0,0,0,0.8);
-    }
-
-    .modal-content {
-      margin: 10% auto;
-      background: #fff;
-      padding: 1rem;
-      width: 80%;
-      max-width: 600px;
-      border-radius: var(--border-radius);
-      text-align: center;
-      position: relative;
-    }
-
-    .modal-content img {
-      width: 100%;
-      border-radius: var(--border-radius);
-    }
-
-    .close {
-      position: absolute;
-      top: 10px;
-      right: 20px;
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: #333;
-      cursor: pointer;
-    }
-
-    @media (max-width: 768px) {
-      .card {
-        width: 100%;
-        margin: 0.5rem 0;
-      }
-    }
-  </style>
 </head>
 <body>
 
-<header>
-  <h1>Golosinas Aries</h1>
-  <nav>
-    <a href="index.html">Inicio</a>
-    <a href="catalogo.html">Catálogo</a>
-    <a href="contacto.html">Contacto</a>
-  </nav>
-</header>
+  <header>
+    <h1>Golosinas Aries</h1>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="catalogo.html">Catálogo</a>
+      <a href="contacto.html">Contacto</a>
+    </nav>
+  </header>
 
-<main>
-  <h2>Catálogo de Productos</h2>
-  <section class="catalogo">
+  <main>
+    <h2>Catálogo de Productos</h2>
+    <section class="portfolio">
 
-    <div class="card">
-      <img src="img/alcancias.jpg" alt="Alcancía de colores" data-title="Alcancía" data-desc="Alcancía artesanal, ideal para regalo.">
-      <h3>Alcancía</h3>
-      <p>Alcancía artesanal, ideal para regalo.</p>
-      <button data-title="Alcancía" data-desc="Alcancía artesanal, ideal para regalo." data-img="img/alcancias.jpg">Ver detalles</button>
+      <!-- Aquí van tus 46 tarjetas de productos -->
+      <div class="card">
+        <img src="img/2.jpg" alt="Producto 2" data-title="Producto 2" data-desc="Descripción del producto 2" data-imgs='["img/2.jpg","img/2ss.jpg"]'>
+        <h3>Producto 2</h3>
+        <p>Descripción del producto 2</p>
+        <button data-title="Producto 2" data-desc="Descripción del producto 2" data-imgs='["img/2.jpg","img/2ss.jpg"]'>Ver detalles</button>
+      </div>
+
+      <div class="card">
+        <img src="img/3.jpg" alt="Producto 3" data-title="Producto 3" data-desc="Descripción del producto 3" data-imgs='["img/3.jpg"]'>
+        <h3>Producto 3</h3>
+        <p>Descripción del producto 3</p>
+        <button data-title="Producto 3" data-desc="Descripción del producto 3" data-imgs='["img/3.jpg"]'>Ver detalles</button>
+      </div>
+
+      <!-- Repetir para todos los productos -->
+
+    </section>
+  </main>
+
+  <!-- Modal -->
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h3 id="modal-title"></h3>
+      <img id="modal-img" src="" alt="">
+      <p id="modal-desc"></p>
+      <div>
+        <button id="prev" class="carousel-btn">&#8592; Anterior</button>
+        <button id="next" class="carousel-btn">Siguiente &#8594;</button>
+      </div>
     </div>
-
-    <div class="card">
-      <img src="img/botellas.jpg" alt="Botellas decorativas" data-title="Botellas" data-desc="Botellas personalizadas para eventos y fiestas.">
-      <h3>Botellas</h3>
-      <p>Botellas personalizadas para eventos y fiestas.</p>
-      <button data-title="Botellas" data-desc="Botellas personalizadas para eventos y fiestas." data-img="img/botellas.jpg">Ver detalles</button>
-    </div>
-
-    <div class="card">
-      <img src="img/burbujero.jpg" alt="Burbujero divertido" data-title="Burbujero" data-desc="Burbujero temático para niños y adultos.">
-      <h3>Burbujero</h3>
-      <p>Burbujero temático para niños y adultos.</p>
-      <button data-title="Burbujero" data-desc="Burbujero temático para niños y adultos." data-img="img/burbujero.jpg">Ver detalles</button>
-    </div>
-
-    <div class="card">
-      <img src="img/cangrejo.jpg" alt="Figura de cangrejo" data-title="Cangrejo" data-desc="Figura de cangrejo para decoración y sorpresas.">
-      <h3>Cangrejo</h3>
-      <p>Figura de cangrejo para decoración y sorpresas.</p>
-      <button data-title="Cangrejo" data-desc="Figura de cangrejo para decoración y sorpresas." data-img="img/cangrejo.jpg">Ver detalles</button>
-    </div>
-
-    <div class="card">
-      <img src="img/logo.jpg" alt="Logo Golosinas Aries" data-title="Logo" data-desc="Logo personalizado para branding o merchandising.">
-      <h3>Logo</h3>
-      <p>Logo personalizado para branding o merchandising.</p>
-      <button data-title="Logo" data-desc="Logo personalizado para branding o merchandising." data-img="img/logo.jpg">Ver detalles</button>
-    </div>
-
-    <div class="card">
-      <img src="img/mechas.jpg" alt="Mechas creativas" data-title="Mechas" data-desc="Mechas decorativas para productos y eventos.">
-      <h3>Mechas</h3>
-      <p>Mechas decorativas para productos y eventos.</p>
-      <button data-title="Mechas" data-desc="Mechas decorativas para productos y eventos." data-img="img/mechas.jpg">Ver detalles</button>
-    </div>
-
-    <div class="card">
-      <img src="img/nutello.jpg" alt="Nutello especial" data-title="Nutello" data-desc="Nutello temático para fiestas y regalos.">
-      <h3>Nutello</h3>
-      <p>Nutello temático para fiestas y regalos.</p>
-      <button data-title="Nutello" data-desc="Nutello temático para fiestas y regalos." data-img="img/nutello.jpg">Ver detalles</button>
-    </div>
-
-    <div class="card">
-      <img src="img/transformer.jpg" alt="Transformer" data-title="Transformer" data-desc="Figura de Transformer para colecciones y sorpresas.">
-      <h3>Transformer</h3>
-      <p>Figura de Transformer para colecciones y sorpresas.</p>
-      <button data-title="Transformer" data-desc="Figura de Transformer para colecciones y sorpresas." data-img="img/transformer.jpg">Ver detalles</button>
-    </div>
-
-  </section>
-</main>
-
-<!-- Modal -->
-<div id="modal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <h3 id="modal-title"></h3>
-    <img id="modal-img" src="" alt="">
-    <p id="modal-desc"></p>
   </div>
-</div>
 
-<script>
-  const modal = document.getElementById('modal');
-  const modalTitle = document.getElementById('modal-title');
-  const modalImg = document.getElementById('modal-img');
-  const modalDesc = document.getElementById('modal-desc');
-  const closeBtn = document.querySelector('.close');
+  <script>
+    const modal = document.getElementById('modal');
+    const modalTitle = document.getElementById('modal-title');
+    const modalImg = document.getElementById('modal-img');
+    const modalDesc = document.getElementById('modal-desc');
+    const closeBtn = document.querySelector('.close');
+    const prevBtn = document.getElementById('prev');
+    const nextBtn = document.getElementById('next');
 
-  // Abrir modal al hacer clic en botón
-  document.querySelectorAll('.card button').forEach(button => {
-    button.addEventListener('click', () => {
-      modal.style.display = 'block';
-      modalTitle.textContent = button.dataset.title;
-      modalImg.src = button.dataset.img;
-      modalImg.alt = button.dataset.title;
-      modalDesc.textContent = button.dataset.desc;
+    let currentImgs = [];
+    let currentIndex = 0;
+
+    document.querySelectorAll('.card button').forEach(button => {
+      button.addEventListener('click', () => {
+        currentImgs = JSON.parse(button.dataset.imgs);
+        currentIndex = 0;
+        modal.style.display = 'block';
+        modalTitle.textContent = button.dataset.title;
+        modalDesc.textContent = button.dataset.desc;
+        modalImg.src = currentImgs[currentIndex];
+        modalImg.alt = button.dataset.title;
+      });
     });
-  });
 
-  // Cerrar modal
-  closeBtn.addEventListener('click', () => {
-    modal.style.display = 'none';
-  });
+    closeBtn.addEventListener('click', () => { modal.style.display = 'none'; });
+    window.addEventListener('click', e => { if(e.target == modal) modal.style.display = 'none'; });
 
-  // Cerrar al hacer clic fuera del contenido
-  window.addEventListener('click', e => {
-    if (e.target == modal) {
-      modal.style.display = 'none';
-    }
-  });
-</script>
+    prevBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex - 1 + currentImgs.length) % currentImgs.length;
+      modalImg.src = currentImgs[currentIndex];
+    });
+
+    nextBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex + 1) % currentImgs.length;
+      modalImg.src = currentImgs[currentIndex];
+    });
+  </script>
 
 </body>
 </html>
