--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Golosinas Aries - Inicio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Golosinas Aries♈🔥 - Inicio</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
   <header>
-    <h1>Golosinas Aries</h1>
+    <h1>Golosinas Aries<span class="emoji">♈🔥</span></h1>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
@@ -17,42 +18,44 @@
     </nav>
   </header>
 
-  <section class="hero" style="background-image: url('img/hero-golosinas.jpg');">
-    <div class="hero-overlay"></div>
-    <h2>Bienvenidos a Golosinas Aries</h2>
-    <p>Dulces, juguetes y regalos personalizados.</p>
-    <button onclick="window.location.href='catalogo.html'">Ver Catálogo</button>
-    <button onclick="window.location.href='contacto.html'">Contáctanos</button>
-  </section>
+  <main>
+    <section class="hero" style="background-image: url('img/hero-golosinas.jpg');">
+      <div class="hero-overlay"></div>
+      <h2>Bienvenidos a Golosinas <span class="emoji">♈🔥</span></h2>
+      <p>Dulces, juguetes y regalos personalizados.</p>
+      <button onclick="window.location.href='catalogo.html'">Ver Catálogo</button>
+      <button onclick="window.location.href='contacto.html'">Contáctanos</button>
+    </section>
 
-  <section class="destacados">
-    <h2>Productos Destacados</h2>
-    <div class="portfolio">
-      <div class="card">
-        <img src="img/alcancias.jpg" alt="Alcancía divertida">
-        <h3>Alcancía rellena</h3>
-        <p>Perfecta para guardar tus monedas y comer ricas gomitas.</p>
-        <button onclick="window.location.href='catalogo.html'">Ver más</button>
+    <section class="destacados">
+      <h2>Productos Destacados</h2>
+      <div class="portfolio">
+        <div class="card">
+          <img src="img/alcancias.jpg" alt="Alcancía divertida">
+          <h3>Alcancía rellena</h3>
+          <p>Perfecta para guardar tus monedas y comer ricas gomitas.</p>
+          <button onclick="window.location.href='catalogo.html'">Ver más</button>
+        </div>
+        <div class="card">
+          <img src="img/burbujero.jpg" alt="Burbujero mágico">
+          <h3>Burbujero mágico</h3>
+          <p>Divertido juego de burbujas.</p>
+          <button onclick="window.location.href='catalogo.html'">Ver más</button>
+        </div>
+        <div class="card">
+          <img src="img/nutello.jpg" alt="Nutello">
+          <h3>Nutello</h3>
+          <p>Snack dulce irresistible para grandes y chicos.</p>
+          <button onclick="window.location.href='catalogo.html'">Ver más</button>
+        </div>
       </div>
-      <div class="card">
-        <img src="img/burbujero.jpg" alt="Burbujero mágico">
-        <h3>Burbujero mágico</h3>
-        <p>Divertido juego de burbujas.</p>
-        <button onclick="window.location.href='catalogo.html'">Ver más</button>
-      </div>
-      <div class="card">
-        <img src="img/nutello.jpg" alt="Nutello">
-        <h3>Nutello</h3>
-        <p>Snack dulce irresistible para grandes y chicos.</p>
-        <button onclick="window.location.href='catalogo.html'">Ver más</button>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="sobre-nosotros">
-    <h3>¿Quiénes somos?</h3>
-    <p>En Golosinas Aries nos dedicamos a crear experiencias dulces y divertidas. Somos una familia emprendedora de Miramar, ¡contactanos!</p>
-  </section>
+    <section class="sobre-nosotros">
+      <h3>¿Quiénes somos?</h3>
+      <p>En Golosinas Aries <span class="emoji">♈🔥</span> nos dedicamos a crear experiencias dulces y divertidas. Somos una familia emprendedora de Miramar, ¡contactanos!</p>
+    </section>
+  </main>
 
 </body>
 </html>
