Agregado buscador al catálogo con filtro en vivo

--- a/catalogo.html
+++ b/catalogo.html
@@ -19,13 +19,33 @@
   </header>
 
   <main>
+
+    <section class="buscador">
+      <input type="text" id="search" placeholder="🔍 Buscar producto..." onkeyup="filtrarProductos()">
+    </section>
+
     <section class="catalogo">
       <h2>Golosinas</h2>
       <div class="portfolio">
         <div class="card">
-          <img src="img/ojos.jpg" alt="Ojos chicos" onclick="abrirModal(this)">
-          <h3>Ojos chicos</h3>
+          <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
+          <h3>Smack bar</h3>
+          <p>$</p>
+        </div>
+        <div class="card">
+          <img src="img/yummy_frutilla_com_crema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Yummy frutilla con crema</h3>
+          <p>$ (500g)</p>
+        </div>
+        <div class="card">
+          <img src="img/ojoschicos.jpg" alt="Ojos CHICOS(variedad de diseños)" onclick="abrirModal(this)">
+          <h3>Ojos CHICOS(variedad de diseños)</h3>
           <p>$18.000,00 (x200)</p>
+        </div>
+        <div class="card">
+          <img src="img/ojos.jpg" alt="Ojos(variedad de diseños)" onclick="abrirModal(this)">
+          <h3>Ojos(variedad de diseños)</h3>
+          <p>$10.500,00 (x30)</p>
         </div>
         <div class="card">
           <img src="img/brochetas.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
@@ -108,11 +128,6 @@
           <p>$12.000,00 (x30)</p>
         </div>
         <div class="card">
-          <img src="img/watch.jpg" alt="Watch chocolate" onclick="abrirModal(this)">
-          <h3>Watch chocolate</h3>
-          <p>$12.000,00 (x30)</p>
-        </div>
-        <div class="card">
           <img src="img/monedas.jpg" alt="Monedas de chocolate" onclick="abrirModal(this)">
           <h3>Monedas de chocolate</h3>
           <p>$17.000,00 (x200)</p>
@@ -149,7 +164,7 @@
           <p>$45.000,00 (x8)</p>
         </div>
         <div class="card">
-          <img src="img/huevos.jpg" alt="Huevos sorpresa" onclick="abrirModal(this)">
+          <img src="img/sorpresa.jpg" alt="Huevos sorpresa" onclick="abrirModal(this)">
           <h3>Huevos sorpresa</h3>
           <p>$14.000,00 (x30)</p>
         </div>
