Actualizo catálogo, reemplazo imágenes y ajustes CSS/JS

--- a/catalogo.html
+++ b/catalogo.html
@@ -27,10 +27,26 @@
     <section class="catalogo">
       <h2>Golosinas</h2>
       <div class="portfolio">
+
         <div class="card">
-          <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
-          <h3>Smack bar</h3>
-          <p>$</p>
+          <img src="img/bull_dog_frutillaa.jpg" alt="Bull dog" onclick="abrirModal(this)">
+          <h3>Bull dog</h3>
+          <p></p>
+        </div>
+        <div class="card">
+          <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
+          <h3>Bombones Surtidos</h3>
+          <p></p>
+        </div>
+        <div class="card">
+          <img src="img/anillos.jpg" alt="Anillos" onclick="abrirModal(this)">
+          <h3>Anillos</h3>
+          <p></p>
+        </div>
+        <div class="card">
+          <img src="img/chicle.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
+          <h3>Chicle por metro</h3>
+          <p>$12.000,00</p>
         </div>
         <div class="card">
           <img src="img/yummy_frutilla_com_crema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
@@ -53,12 +69,17 @@
           <p>$12.000,00 (x30)</p>
         </div>
         <div class="card">
+          <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
+          <h3>Smack bar</h3>
+          <p>$</p>
+        </div>
+        <div class="card">
           <img src="img/mecha.jpg" alt="Mechas mágicas" onclick="abrirModal(this)">
           <h3>Mechas mágicas</h3>
           <p>$13.000,00 (x30)</p>
         </div>
         <div class="card">
-          <img src="img/ss.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
+          <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
           <h3>Foot Lollipop</h3>
           <p>$13.000,00 (x30)</p>
         </div>
@@ -98,8 +119,8 @@
           <p>$12.000,00 (x30)</p>
         </div>
         <div class="card">
-          <img src="img/ddd.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
-          <h3>Auto/Camiseta/Celular/Spiderman + chicles</h3>
+          <img src="img/tel.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
+          <h3>Celu + chicles</h3>
           <p>$14.000,00 (x30)</p>
         </div>
         <div class="card">
@@ -172,6 +193,11 @@
           <img src="img/poke.jpg" alt="Bolas Pokémon con sorpresa y caramelo" onclick="abrirModal(this)">
           <h3>Bolas Pokémon con sorpresa y caramelo</h3>
           <p>$14.000,00 (x30)</p>
+        </div>
+        <div class="card">
+          <img src="img/cangrejo.jpg" alt="Cangrejo" onclick="abrirModal(this)">
+          <h3>Cangrejo</h3>
+          <p></p>
         </div>
       </div>
     </section>
