--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-
+  <!-- Header -->
   <header>
-    <h1>Golosinas Aries<span class="emoji">♈🔥</span></h1>
+    <h1>Golosinas Aries <span class="emoji">♈🔥</span></h1>
     <nav>
       <a href="index.html">Inicio</a>
       <a href="catalogo.html">Catálogo</a>
@@ -18,15 +18,19 @@
     </nav>
   </header>
 
+  <!-- Hero -->
   <main>
     <section class="hero" style="background-image: url('img/hero-golosinas.jpg');">
       <div class="hero-overlay"></div>
-      <h2>Bienvenidos a Golosinas <span class="emoji">♈🔥</span></h2>
-      <p>Dulces, juguetes y regalos personalizados.</p>
-      <button onclick="window.location.href='catalogo.html'">Ver Catálogo</button>
-      <button onclick="window.location.href='contacto.html'">Contáctanos</button>
+      <h2>Bienvenidos a Golosinas Aries <span class="emoji">♈🔥</span></h2>
+      <p>Golosinas, juguetes y combos personalizados.</p>
+      <div class="hero-buttons">
+        <button class="btn" onclick="window.location.href='catalogo.html'">Ver Catálogo</button>
+        <button class="btn" onclick="window.location.href='contacto.html'">Contáctanos</button>
+      </div>
     </section>
 
+    <!-- Productos Destacados -->
     <section class="destacados">
       <h2>Productos Destacados</h2>
       <div class="portfolio">
@@ -51,11 +55,11 @@
       </div>
     </section>
 
+    <!-- Sobre Nosotros -->
     <section class="sobre-nosotros">
       <h3>¿Quiénes somos?</h3>
       <p>En Golosinas Aries <span class="emoji">♈🔥</span> nos dedicamos a crear experiencias dulces y divertidas. Somos una familia emprendedora de Miramar, ¡contactanos!</p>
     </section>
   </main>
-
 </body>
 </html>
