--- a/index.html
+++ b/index.html
@@ -61,5 +61,15 @@
       <p>En Golosinas Aries <span class="emoji">♈🔥</span> nos dedicamos a crear experiencias dulces y divertidas. Somos una familia emprendedora de Miramar, ¡contactanos!</p>
     </section>
   </main>
+
+  <!-- Footer con botones de redes sociales -->
+<footer>
+  <a href="https://instagram.com/golosinasaries" target="_blank" class="social-btn instagram">Instagram</a>
+  <a href="https://facebook.com/golosinasaries" target="_blank" class="social-btn facebook">Facebook</a>
+  <a href="https://wa.me/542236010443" target="_blank" class="social-btn whatsapp">WhatsApp</a>
+    <!-- Botón volver arriba -->
+  <a href="#" class="back-to-top">⬆ Volver arriba</a>
+</footer>
+
 </body>
 </html>
