--- a/catalogo.html
+++ b/catalogo.html
@@ -212,6 +212,14 @@
     </div>
   </main>
 
+<footer>
+  <a href="https://instagram.com/golosinasaries" target="_blank" class="social-btn instagram">Instagram</a>
+  <a href="https://facebook.com/golosinasaries" target="_blank" class="social-btn facebook">Facebook</a>
+  <a href="https://wa.me/542236010443" target="_blank" class="social-btn whatsapp">WhatsApp</a>
+    <!-- Botón volver arriba -->
+  <a href="#" class="back-to-top">⬆ Volver arriba</a>
+</footer>
+
   <script src="js/catalogo.js"></script>
 </body>
 </html>
