Actualizo catalogo y agrego imagen oblita

--- a/catalogo.html
+++ b/catalogo.html
@@ -30,18 +30,28 @@
 
         <div class="card">
           <img src="img/bull_dog_frutillaa.jpg" alt="Bull dog" onclick="abrirModal(this)">
-          <h3>Bull dog</h3>
-          <p></p>
+          <h3>Gomitas Bull dog</h3>
+          <p>$6.800 (360g)</p>
+        </div>
+          <div class="card">
+          <img src="img/gomutcho_acidos.jpg" alt="Gomitas Gomutcho acidos" onclick="abrirModal(this)">
+          <h3>Gomitas acidas</h3>
+          <p>$5.800 (500g)</p>
+        </div>
+        <div class="card">
+          <img src="img/oblita.jpg" alt="Cubanitos" onclick="abrirModal(this)">
+          <h3>Cubanitos</h3>
+          <p>$5.800 (48 unidates)</p>
         </div>
         <div class="card">
           <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
           <h3>Bombones Surtidos</h3>
-          <p></p>
+          <p>$9.000 (50 unidades)</p>
         </div>
         <div class="card">
           <img src="img/anillos.jpg" alt="Anillos" onclick="abrirModal(this)">
-          <h3>Anillos</h3>
-          <p></p>
+          <h3>Gomitas Anillos</h3>
+          <p>$7.800 (700g)</p>
         </div>
         <div class="card">
           <img src="img/chicle.jpg" alt="Chicle por metro" onclick="abrirModal(this)">
@@ -49,59 +59,64 @@
           <p>$12.000,00</p>
         </div>
         <div class="card">
+          <img src="img/gallinitas.jpg" alt="Gallinitas" onclick="abrirModal(this)">
+          <h3>Gallinitas</h3>
+          <p>$8.500 (25 unidades)</p>
+        </div>
+        <div class="card">
           <img src="img/yummy_frutilla_com_crema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
-          <h3>Yummy frutilla con crema</h3>
-          <p>$ (500g)</p>
+          <h3>Gomitas Yummy frutilla con crema</h3>
+          <p>$6.800(500g)</p>
         </div>
         <div class="card">
           <img src="img/ojoschicos.jpg" alt="Ojos CHICOS(variedad de diseños)" onclick="abrirModal(this)">
           <h3>Ojos CHICOS(variedad de diseños)</h3>
-          <p>$18.000,00 (x200)</p>
+          <p>$18.000 (x200)</p>
         </div>
         <div class="card">
           <img src="img/ojos.jpg" alt="Ojos(variedad de diseños)" onclick="abrirModal(this)">
           <h3>Ojos(variedad de diseños)</h3>
-          <p>$10.500,00 (x30)</p>
+          <p>$10.500 (x30)</p>
         </div>
         <div class="card">
           <img src="img/brochetas.jpg" alt="Brochetas ojos" onclick="abrirModal(this)">
           <h3>Brochetas ojos</h3>
-          <p>$12.000,00 (x30)</p>
+          <p>$12.000 (x30)</p>
         </div>
         <div class="card">
           <img src="img/smack_bar.jpg" alt="Smack bar." onclick="abrirModal(this)">
           <h3>Smack bar</h3>
-          <p>$</p>
+          <p>$6.500(12 unidades)</p>
         </div>
         <div class="card">
           <img src="img/mecha.jpg" alt="Mechas mágicas" onclick="abrirModal(this)">
           <h3>Mechas mágicas</h3>
-          <p>$13.000,00 (x30)</p>
+          <p>$13.000 (x30)</p>
         </div>
         <div class="card">
           <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
           <h3>Foot Lollipop</h3>
-          <p>$13.000,00 (x30)</p>
+          <p>$13.000 (x30)</p>
         </div>
         <div class="card">
           <img src="img/ponyy.jpg" alt="Pony spray candy" onclick="abrirModal(this)">
           <h3>Pony spray candy</h3>
-          <p>$16.000,00 (x30)</p>
+          <p>$16.000 (x30)</p>
         </div>
         <div class="card">
           <img src="img/psncho.jpg" alt="Gomitas pizza/pancho/coca" onclick="abrirModal(this)">
           <h3>Gomitas con forma</h3>
-          <p>$12.000,00 (x30)</p>
+          <p>$12.000 (x30)</p>
         </div>
         <div class="card">
           <img src="img/latas.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
           <h3>Latitas con chicles</h3>
-          <p>$17.000,00 (x30)</p>
+          <p>$17.000 (x30)</p>
         </div>
         <div class="card">
           <img src="img/botellas.jpg" alt="Botellitas con chicles" onclick="abrirModal(this)">
           <h3>Botellitas con chicles</h3>
-          <p>$13.000,00 (x30)</p>
+          <p>$13.000 (x30)</p>
         </div>
         <div class="card">
           <img src="img/chupetines.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
